# revmc-toolkit

./: .env.sample  .gitignore  Cargo.toml  README.md  revmc.build.config.json  revmc.load.config.json
.data/measurements-public/: f18999999t20371443_blocks_aotonly.csv  f18999999t20371443_blocks_tob10_aotonly.csv  f18999999t20371443_txs_aotonly.csv  f18999999t20371443_txs_tob.csv
.github/scripts/: install_llvm_ubuntu.sh
.github/workflows/: ci.yml
analysis/: notebook.ipynb  notebook_tob.ipynb  notebook_txs.ipynb  notebook_txs_for_block.ipynb  notebook_txs_tob.ipynb  requirements.txt
crates/bench/: Cargo.toml
crates/bench/src/: benches.rs  cli.rs  main.rs  runners.rs  sim.rs
crates/bench/src/utils/: bench.rs  build_utils.rs  mod.rs  sim.rs
crates/builder-revmc/: Cargo.toml  build.rs
crates/builder-revmc/src/: build.rs  evm.rs  main.rs  sim.rs  utils.rs
crates/load/: Cargo.toml
crates/load/src/: aot_evm.rs  evm_components.rs  fn_loader.rs  lib.rs
crates/revmc-sim/: Cargo.toml
crates/revmc-sim-build/: Cargo.toml
crates/revmc-sim-build/src/: compiler.rs  lib.rs  main.rs  utils.rs
crates/revmc-sim-cli/: Cargo.toml
crates/revmc-sim-cli/src/: cli.rs  main.rs  sim.rs  utils.rs
crates/revmc-sim-cli/src/utils/: build_utils.rs  evm_utils.rs  mod.rs  rnd_utils.rs  sim_utils.rs
crates/revmc-sim-load/: Cargo.toml
crates/revmc-sim-load/src/: aot_evm.rs  fn_loader.rs  lib.rs
crates/revmc-sim/src/: aot_evm.rs  build.rs  fn_loader.rs  main.rs  sim.rs  utils.rs
crates/sim/: Cargo.toml
crates/sim/src/: bytecode_touches.rs  gas_guzzlers.rs  lib.rs  sim_builder.rs  tx_sim.rs
crates/sim/src/utils/: evm.rs
crates/utils/: Cargo.toml
crates/utils/src/: build.rs  evm.rs  lib.rs  misc.rs  rnd.rs
example/: build.rs
scripts/: run.sh
src/: build.rs  main.rs  revmc_lib.rs  sim.rs
