[workspace]
members = ["crates/*"]
default-members = [
    "crates/load", 
    "crates/build",
    "crates/bench",
]
resolver = "2"

[workspace.dependencies]
revmc-toolbox-load = { path = "crates/load" }
revmc-toolbox-build = { path = "crates/build" }

reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "2adf2d33649f952eb8ec71f5eaf4d8e9660ae4d6" } 
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "2adf2d33649f952eb8ec71f5eaf4d8e9660ae4d6" } 
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "2adf2d33649f952eb8ec71f5eaf4d8e9660ae4d6" } 
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "2adf2d33649f952eb8ec71f5eaf4d8e9660ae4d6" } 
reth-primitives = { git = "https://github.com/paradigmxyz/reth", features = ["c-kzg"], rev = "2adf2d33649f952eb8ec71f5eaf4d8e9660ae4d6" } 
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", rev = "2adf2d33649f952eb8ec71f5eaf4d8e9660ae4d6" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "2adf2d33649f952eb8ec71f5eaf4d8e9660ae4d6" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "2adf2d33649f952eb8ec71f5eaf4d8e9660ae4d6" }
revmc = { git = "https://github.com/paradigmxyz/revmc" }
revmc-builtins = { git = "https://github.com/paradigmxyz/revmc" }
revmc-context = { git = "https://github.com/paradigmxyz/revmc" }
revmc-build = { git = "https://github.com/paradigmxyz/revmc" }
revm-interpreter = "6.0.0"
revm = "10.0.0"
dotenv = "0.15.0"
eyre = "0.6.12"
cc = "1.0.104"
libloading = "0.8.4"
hex = "0.4.3"