[workspace]
members = ["crates/*"]
default-members = [
    "crates/load", 
    "crates/build",
    "crates/sim",
    "crates/utils"
]
resolver = "2"

[workspace.dependencies]
revmc-toolbox-load = { path = "crates/load" }
revmc-toolbox-build = { path = "crates/build" }
revmc-toolbox-sim = { path = "crates/sim" }
revmc-toolbox-utils = { path = "crates/utils" }

reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "ec5ce2196519dd96e9246817b7f9ff94bad129a3" } 
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "ec5ce2196519dd96e9246817b7f9ff94bad129a3" } 
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "ec5ce2196519dd96e9246817b7f9ff94bad129a3" } 
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "ec5ce2196519dd96e9246817b7f9ff94bad129a3" } 
reth-primitives = { git = "https://github.com/paradigmxyz/reth", features = ["c-kzg"], rev = "ec5ce2196519dd96e9246817b7f9ff94bad129a3" } 
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", rev = "ec5ce2196519dd96e9246817b7f9ff94bad129a3" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "ec5ce2196519dd96e9246817b7f9ff94bad129a3" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "ec5ce2196519dd96e9246817b7f9ff94bad129a3" }
revmc = { git = "https://github.com/paradigmxyz/revmc" }
revmc-builtins = { git = "https://github.com/paradigmxyz/revmc" }
revmc-context = { git = "https://github.com/paradigmxyz/revmc" }
revmc-build = { git = "https://github.com/paradigmxyz/revmc" }
revm-interpreter = "10.0.0"
revm = "14.0.0"
dotenv = "0.15.0"
eyre = "0.6.12"
cc = "1.0.104"
libloading = "0.8.4"
hex = "0.4.3"