[package]
name = "revmc-sim-build"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
revmc.workspace = true
revm = { workspace = true, features = ["serde"] }
eyre.workspace = true
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
hex.workspace = true