[package]
name = "revmc-sim-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
revmc-sim-build.workspace = true
revmc-sim-load.workspace = true

reth-db.workspace = true
reth-provider.workspace = true
reth-chainspec.workspace = true
reth-revm.workspace = true
reth-primitives.workspace = true
reth-rpc-types.workspace = true
reth-evm-ethereum.workspace = true
reth-evm.workspace = true
revmc.workspace = true
revmc-builtins.workspace = true
revmc-context.workspace = true
revmc-build.workspace = true
revm-interpreter.workspace = true
revm.workspace = true
dotenv.workspace = true
eyre.workspace = true
cc.workspace = true
libloading.workspace = true
hex.workspace = true
rayon = "1.10.0"
clap = "4.5.8"
criterion = "0.5.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
csv = "1.3.0"

[build-dependencies]
revmc-build.workspace = true
